--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.1.0",
