--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "mongoose-sequence": "^6.0.1",
