--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,5 +7,6 @@
     "skipLibCheck": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*.ts", "express.d.ts"]
+  "include": ["src/**/*.ts", "express.d.ts"],
+  "exclude": ["node_modules"]
 }
