--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,37 +4,20 @@
   "version": "0.0.0",
   "type": "commonjs",
   "scripts": {
-    "dev:client": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "dev:server": "nodemon --exec ts-node server/server.ts"
+    "dev": "vite",
+    "build": "../node_modules/.bin/tsc && vite build",
+    "lint": "../node_modules/.bin/eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "../node_modules/.bin/vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.12",
-    "@types/uuid": "^9.0.8",
-    "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.4.0",
-    "mongoose-sequence": "^6.0.1",
-    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
